Hide stats graph when control panel not visible, Fix dat gui close button bug, Clean up control panel styles

--- a/src/styles/components/_VisualControlPanel.scss
+++ b/src/styles/components/_VisualControlPanel.scss
@@ -17,7 +17,7 @@
 .viscontrol--menubuttons.exterior{
   height: 40px;
   width: 40px;
-  margin: auto 20px;
+  margin: 0 10px 0 10px;
 }
 
 .viscontrol--menubuttons.interior{
