--- a/src/styles/components/_VisualDatGui.scss
+++ b/src/styles/components/_VisualDatGui.scss
@@ -3,3 +3,6 @@
   overflow-y: auto;
   overflow-x: hidden;
 }
+.dg.main .close-button.close-bottom {
+  position: relative !important;
+}
