--- a/src/styles/parts/_loadingScreen.scss
+++ b/src/styles/parts/_loadingScreen.scss
@@ -17,6 +17,6 @@
   margin: 10px 0;
 }
 .loading__instruction{
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
 }
